--- a/clientui/src/main/resources/templates/ouvragedetails.html
+++ b/clientui/src/main/resources/templates/ouvragedetails.html
@@ -2,9 +2,7 @@
 <html
         xmlns:th="http://www.thymeleaf.org"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        xmlns:sec="http://www.thymeleaf.org/extras/spring-security5"
-        layout:decorate="~{accueil}"
->
+        layout:decorate="~{accueil}">
 
 <head>
     <meta charset="utf-8" />
@@ -58,7 +56,7 @@
                     <th>Année d'édition</th>
                     <th>Côte</th>
                     <th>Nb de pages</th>
-                    <th>Nb d'exemplaires dispo</th>
+                    <th>Nb d'exemplaires dispos</th>
                 </tr>
                 </thead>
                 <tbody>
