--- a/clientui/src/main/resources/templates/confirmationdemandepret.html
+++ b/clientui/src/main/resources/templates/confirmationdemandepret.html
@@ -20,7 +20,7 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                <span class="green"><strong>Nous vous confirmons que votre demande a bien été ajoutée à la liste de reservation de l'ouvrage, elle sera traitée dans les meilleurs délais !</strong></span>
+                <span class="green"><strong>Nous avons bien reçu votre demande de prêt, elle sera traitée dans les meilleurs délais !</strong></span>
             </div>
             <div class="panel-body">
                 <label>Pour rappel, voici l'ouvrage demandé :</label><br>
@@ -36,10 +36,6 @@
                 <label th:text="${ouvrage.anneeEdition}"></label><br>
                 <label>Cote : </label>
                 <label th:text="${ouvrage.cote}"></label><br>
-                <label>Date retour la plus proche : </label>
-                <label th:text="${ouvrage.dateRetourLaPlusProche}"></label><br>
-                <label>Nombre de lecteurs en attente : </label>
-                <label th:text="${listeAttente.size()}"></label><br>
             </div>
         </div>
 
