--- a/clientui/src/main/resources/templates/confirmationpret.html
+++ b/clientui/src/main/resources/templates/confirmationpret.html
@@ -16,8 +16,34 @@
 
 <section layout:fragment="content">
 
-    <div class="container">
+    <div class="container" th:unless="${listeAttenteResasByOuvrage.isEmpty()}">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <span class="green"><strong>Malheureusement, l'ouvrage est indisponible ... Votre demande a bien été ajoutée à la liste de reservation de l'ouvrage, elle sera traitée dans les meilleurs délais !</strong></span>
+            </div>
+            <div class="panel-body">
+                <label>Voici le récapitulatif de la reservation : </label><br>
+                <label>Nom : </label>
+                <label th:text="${utilisateur.nom}"></label><br>
+                <label>Prénom : </label>
+                <label th:text="${utilisateur.prenom}"></label><br>
+                <label>Ouvrage : </label>
+                <label th:text="${reservation.ouvrage.titre}"></label><br>
+                <label>Date de demande : </label>
+                <label th:text="${reservation.dateDemande}"></label><br>
+                <label>Date de retour le plus proche : </label>
+                <label th:text="${reservation.ouvrage.dateRetourLaPlusProche}"></label><br>
+                <label>Nombre de lecteurs en attente : </label>
+                <label th:text="${listeAttenteResasByOuvrage.size()}"></label><br>
+                <label>Position sur liste d'attente : </label>
+                <label th:text="${reservation.position}"></label><br>
+            </div>
+        </div>
+    </div>
 
+
+
+    <div class="container" th:if="${listeAttenteResasByOuvrage.isEmpty()}">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <span class="green"><strong>Nous vous confirmons le prêt de l'ouvrage demandé par le lecteur</strong></span>
