--- a/clientui/src/main/resources/templates/espaceperso.html
+++ b/clientui/src/main/resources/templates/espaceperso.html
@@ -27,6 +27,12 @@
             </form>
         </div>
 
+        <div id="espaceperso_demandeDePrets" class="container">
+            <form class="form-inline" th:action="@{/DemandeDePretsUtilisateur}" method="get">
+                <button class="btn btn-primary"><strong>MES DEMANDES DE PRETS</strong></button>
+            </form>
+        </div>
+
         <div id="espaceperso_prets" class="container">
             <form class="form-inline" th:action="@{/PretsUtilisateur}" method="get">
                 <button class="btn btn-primary"><strong>MES PRETS</strong></button>
@@ -38,34 +44,16 @@
 
     <div  sec:authorize="hasAuthority('ADMIN')" id="categories_espace_perso_Admin" class="container">
 
-        <div id="liste_reservations" class="container">
+        <div id="espacepersoadmin_demandeDePrets" class="container">
+            <form class="form-inline" th:action="@{/DemandeDePretsAdmin}" method="get">
+                <button class="btn btn-primary"><strong>LES DEMANDES DE PRET</strong></button>
+            </form>
+        </div>
 
-            <div class="table-responsive col-lg-12 col-md-10 col-xs-9">
-                <div id="titreTableau"><h4><strong> LISTE DE PRETS DES LECTEURS </strong></h4></div>
-                <br>
-                <table class="table table-bordered table-striped">
-                    <thead>
-                    <tr>
-                        <th>Id Lecteur</th>
-                        <th>Date de réservation</th>
-                        <th>Ouvrage</th>
-                        <th>Statut</th>
-                        <th>Valider</th>
-                        <th>Retour</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="pret:${listePrets}">
-                        <td th:text="${pret.idUtilisateur}"></td>
-                        <td th:text="${pret.dateReservation}"></td>
-                        <td th:text="${pret.ouvrage.titre}"></td>
-                        <td th:text="${pret.statut}"></td>
-                        <td><a th:if="${pret.enAttente}" th:href="@{/ValiderPret(idPret=${pret.id})}" method="get" class="btn btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span></a></td>
-                        <td><a th:if="${pret.enCours or pret.Prolonge or pret.Depasse}" th:href="@{/RetourPret(idPret=${pret.id})}" method="get" class="btn btn-primary"><span class="glyphicon glyphicon-time"></span></a></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+        <div id="espacepersoadmin_demandeDeReservations" class="container">
+            <form class="form-inline" th:action="@{/DemandeDeReservationsAdmin}" method="get">
+                <button class="btn btn-primary"><strong>LES DEMANDES DE RESERVATION</strong></button>
+            </form>
         </div>
 
     </div>
