--- a/clientui/src/main/resources/templates/listeprets.html
+++ b/clientui/src/main/resources/templates/listeprets.html
@@ -26,6 +26,12 @@
             </form>
         </div>
 
+        <div id="espaceperso_demandeDePrets" class="container">
+            <form class="form-inline" th:action="@{/DemandeDePretsUtilisateur}" method="get">
+                <button class="btn btn-primary"><strong>MES DEMANDES DE PRETS</strong></button>
+            </form>
+        </div>
+
         <div id="espaceperso_prets" class="container">
             <form class="form-inline" th:action="@{/PretsUtilisateur}" method="get">
                 <button class="btn btn-primary"><strong>MES PRETS</strong></button>
