--- a/clientui/src/main/resources/templates/listereservations.html
+++ b/clientui/src/main/resources/templates/listereservations.html
@@ -34,7 +34,7 @@
 
         <div id="espaceperso_prets" class="container">
             <form class="form-inline" th:action="@{/PretsUtilisateur}" method="get">
-                <button class="btn btn-primary"><strong>MES PRETS</strong></button>
+                <button class="btn btn-primary"><strong>MES PRETS EN COURS</strong></button>
             </form>
         </div>
 
