modif sur phrase d'accueil

--- a/clientui/src/main/resources/templates/accueil.html
+++ b/clientui/src/main/resources/templates/accueil.html
@@ -29,7 +29,7 @@
             <strong>
             <p>Bonjour et bienvenue sur le site de La Bibliothèque Municipale.</p>
             <p>Cette espace est dedié à la consultation ainsi qu'à l'emprunt d'ouvrages mis à disposition par la bibliothèque.</p>
-            <p>Pensez à vous inscrire pour bénéficier de votre espace de prêt !</p>
+            <p>Pensez à vous inscrire pour bénéficier de votre espace perso !</p>
             </strong>
         </h4>
         <h3>
